# Pagfutbol

./: .replit  app.py  package-lock.json  package.json  populate_db.py  pyproject.toml  replit.md  start_python.py
client/src/: App.tsx  index.css
client/src/components/: fixtures-panel.tsx  futuristic-background.tsx  interactive-team-grid.tsx  language-selector.tsx  live-dashboard.tsx  live-matches.tsx  modern-team-selector.tsx  navigation.tsx  standings-table.tsx  team-profile.tsx  team-selector.tsx
client/src/lib/: i18n.ts  team-config-old.ts  team-config.ts  team-facts.ts  team-players.ts
client/src/pages/: betting.tsx  dashboard.tsx  donations.tsx  home.tsx  team-dashboard.tsx  trivia.tsx
server/: index.ts  routes.ts  storage.ts
server/services/: improved-scraper.ts  multi-scraper.ts  scraper.ts
shared/: schema.ts
static/css/: styles.css
static/js/: app.js  components.js  paypal.js  team-config.js
templates/: index.html
